Fix #32905: Crash with Levels node when no input is connected.